Test to see how fast it regenerates

--- a/_posts/2015-05-09-a-new-try.md
+++ b/_posts/2015-05-09-a-new-try.md
@@ -5,6 +5,8 @@ date:   2017-05-09 22:25:01 -0200
 categories: jekyll test generated
 ---
 
+Testing around!
+
 Just playing arround a bit to see if this new post is immediatly processed by github somehow.
 
 I'm also curious to see if the new theme is beeing applied and if there is some notion of a newly added category
